fix: allow encrypted file uploads on Cloudflare
